# passdroid

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  legacy.rs  lib.rs  main.rs  models.rs  preferences.rs  sync.rs  vault.rs
src/i18n/: en.ts  es.ts  index.ts
