[package]
name = "passdroid-next"
version = "3.0.0"
description = "Modern Tauri password vault compatible with Passdroid migration"
authors = ["Passdroid Next"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "passdroid_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes = "0.8"
argon2 = "0.5"
base64 = "0.22"
cbc = "0.1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1"
ecb = "0.1"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
suppaftp = "6"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

